[project]
name = "deer-flow-demo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "deerflow-harness",
]

[tool.uv.workspace]
members = [
    "deer-flow/backend/packages/harness",
]

[tool.uv.sources]
deerflow-harness = { workspace = true }
